# OpenMath

./: .gitignore  Cargo.toml
.github/workflows/: build.yaml
ftml-uris/: Cargo.toml
ftml-uris/.cargo/: config.toml
ftml-uris/src/: archive.rs  base.rs  doc_element.rs  document.rs  lib.rs  module.rs  paths.rs  symbol.rs
ftml-uris/src/aux/: interning.rs  macros.rs
openmath/: Cargo.toml  Makefile.toml  README.md
openmath/.cargo/: config.toml
openmath/doc/: docs.html
openmath/src/: base64.rs  errors.rs  int.rs  lib.rs  uris.rs
openmath/src/de/: mod.rs  serde_aux.rs  serde_impl.rs  xml.rs
openmath/src/ser/: mod.rs  serde_impl.rs  xml.rs
