[workspace]
members = ["openmath"]
exclude = []
resolver = "3"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[workspace.dependencies]
openmath = { path = "openmath" }

tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"

serde = { version = "1" }
serde-value = { version = "0.7" }
url = { version = "2.5" }
ordered-float = { version = "5" }
rustc-hash = "2"
either = "1"
smallvec = { version = "2.0.0-alpha.11" }
impl-tools = { git = "https://github.com/kas-gui/impl-tools" } #"0.11.2"
paste = "1"
document-features = "0.2"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
xml = "0.8"

either_of = "0.1"

triomphe = "0.1"
parking_lot = "0.12"
criterion = { version = "0.5", features = ["tokio"] }
thread_local = "1.1.8"
hashbrown = "0.14.5"
rand = "0.8"
strumbra = "0.5"
tokio = { version = "1" }
tokio-uring = { version = "0.5" }
nix = { version = "0.29" }
rstest = { version = "0.25" }
ctor = { version = "0.4" }
dashmap = { version = "6" }
async-broadcast = { version = "0.7" }
bincode = { version = "2", features = ["serde"] }
num-bigint = { version = "0.4" }
dyn-clone = { version = "1" }
ibig = "0.3"
const_format = "0.2"
enum_dispatch = "0.3"
wasm-bindgen = "0.2"
tsify-next = { version = "0.5", features = ["js"] }
serde_with = "3"
arrayvec = "0.7"
leptos_router = "0.8"
server_fn = "0.8"
server_fn_macro_default = "0.8"
derive_more = "2"
base64 = "0.22"

proc-macro2 = "1"
quote = "1"
syn = "2"
proc-macro-crate = "3"
