[package]
name = "openmath"
version = "0.0.1"
edition = "2024"

[lints]
workspace = true

[features]
## Adds serde support
serde = [
    "dep:serde",
    "url/serde",
    "ordered-float/serde",
    "either/serde",
    "smallvec/serde",
]
## adds xml support
xml = ["dep:quick-xml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "-Zunstable-options",
    "-Zrustdoc-scrape-examples",
    "--all-features",
    "--generate-link-to-definition",
    "--html-in-header",
    "doc/katex-header.html",
    "--html-in-header",
    "doc/docs.html",
]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dependencies]
#adtenum = { workspace = true, features = ["strum", "strumbra", "bigint"] }
serde = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
#serde-value = { workspace = true, optional = true }
url = { workspace = true }
#num-bigint = { workspace = true }
ordered-float = { workspace = true }
#strumbra = { workspace = true }
#dyn-clone = { workspace = true }
rustc-hash = { workspace = true }
either = { workspace = true }
smallvec = { workspace = true }
impl-tools = { workspace = true }
paste = { workspace = true }
document-features = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
#base64 = { workspace = true }
#derive_more = { workspace = true, features = ["from"] }
