[package]
name = "openmath"
version = "0.0.1"
edition = "2024"

[lints]
workspace = true

[features]
## Adds serde support
serde = [
    "dep:serde",
    "url/serde",
    "dep:serde_cow",
    "ordered-float/serde",
    "either/serde",
    "smallvec/serde",
]
## adds deserialization from xml; requires the [quick-xml](https://docs.rs/quick-xml) crate
xml = ["dep:quick-xml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "-Zunstable-options",
    "-Zrustdoc-scrape-examples",
    "--all-features",
    "--generate-link-to-definition",
    "--html-in-header",
    "doc/katex-header.html",
    "--html-in-header",
    "doc/docs.html",
]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dependencies]
document-features = { workspace = true }
#adtenum = { workspace = true, features = ["strum", "strumbra", "bigint"] }
url = { workspace = true }
ordered-float = { workspace = true }
#strumbra = { workspace = true }
rustc-hash = { workspace = true }
either = { workspace = true }
smallvec = { workspace = true }
impl-tools = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true, optional = true }
serde_cow = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
