[package]
name = "openmath"
version = "0.1.3"
edition = "2024"

authors = ["Dennis Müller <d.mueller@kwarc.info>"]
description = "Support for OpenMath (de)serialization"
readme = "README.md"
repository = "https://github.com/FlexiFormal/OpenMath"
license = "GPL-3.0-or-later"
keywords = ["openmath"]
categories = [
    "encoding",
    "data-structures",
    "parser-implementations",
    "mathematics",
]
exclude = ["./absolve.sh", "src/errors.rs"]


[lints]
workspace = true

[features]
## Adds serde support
serde = ["dep:serde", "dep:serde_cow", "ordered-float/serde", "either/serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--html-in-header",
    "doc/katex-header.html",
    "--html-in-header",
    "doc/docs.html",
]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
serde_json = { workspace = true, features = ["arbitrary_precision"] }

[dependencies]
document-features = { workspace = true }
ordered-float = { workspace = true }
either = { workspace = true }
either_of = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
quick-xml = { workspace = true }


serde = { workspace = true, optional = true }
serde_cow = { workspace = true, optional = true }
